# semcom-playground

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: default.yaml
configs/channel/: awgn.yaml
configs/dataset/: toy_text.yaml
configs/model/: debug_model.yaml
configs/tracking/: offline.yaml
configs/training/: debug.yaml
experiments/001_text_awgn_debug/: README.md  config.yaml  run.sh
experiments/002_deepsc_paper_awgn/: README.md  config.yaml  run.sh
experiments/003_deepsc_paper_rayleigh/: README.md  config.yaml  run.sh
experiments/004_deepsc_paper_rician/: README.md  config.yaml  run.sh
experiments/005_text_embedding_retrieval_ofdm/: README.md  config.yaml  run.sh
experiments/006_text_embedding_retrieval_ofdm_rayleigh/: README.md  config.yaml  run.sh
results/debug/: compiled_config.yaml
scripts/: run_deepsc_text.py  run_text_embedding_retrieval_ofdm.py  train.py
src/semcom/channels/: awgn.py  deepsc.py  factory.py  rayleigh.py  rician.py  sionna_ofdm.py
src/semcom/data/: europarl.py  prepare_europarl.py  tokenizer.py  toy_text.py
src/semcom/evaluation/: text_metrics.py
src/semcom/models/: factory.py  mine.py
src/semcom/training/: deepsc_loss.py
tests/: test_awgn_channel.py  test_channel_factory.py  test_config_loading.py  test_deepsc_text_model.py  test_io.py  test_mine.py  test_model_factory.py  test_prepare_europarl.py  test_project.py  test_seed.py  test_text_metrics.py  test_text_semantic_autoencoder.py  test_tokenizer.py  test_toy_text_dataset.py
(+9 files in other folders)
