[project]
name = "semcom-playground"
version = "0.1.0"
description = "Exploring AI-native wireless communication through semantic transmission of text and images using modern ML and communication-system simulation tools."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Saeed Bagherinejad" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "hydra-core",
    "omegaconf",
    "pytest",
    "w3lib",
    "sionna",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
